Fix align prop regression

--- a/src/globals/sass/settings/_breakpoints.scss
+++ b/src/globals/sass/settings/_breakpoints.scss
@@ -1,6 +1,4 @@
-$screen-lg: 1600px;
-$screen-md: 900px;
-$screen-sm: 450px;
-
-$grid-column-width: 24;
-$grid-gutter-width: ($grid-column-width / 2);
+$screen-sm: 480px;
+$screen-md: 768px;
+$screen-lg: 1280px;
+$screen-xlg: 1680px;
